--- a/custom/index.html
+++ b/custom/index.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>XylemJS with Vite</title>
+<base href="/">
 <link rel="stylesheet" href="style.css">
 
 <script type="importmap">
